--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
     font-size: 14px;
     line-height: 16px;
+    background: rgb(245, 243, 243);
     
   }
 
